After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 681725 - empathy crashed with SIGSEGV in g_slist_remove()
empathy crashed with SIGSEGV in g_slist_remove()
Status: RESOLVED FIXED
Product: empathy
Classification: Core
Component: General
3.5.x
Other Linux
: Normal critical
: 3.6
Assigned To: empathy-maint
empathy-maint
: 681724 682035 684104 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2012-08-13 07:43 UTC by Bilal Shahid
Modified: 2012-10-08 08:38 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
stacktrace (13.49 KB, text/plain)
2012-08-13 07:43 UTC, Bilal Shahid
  Details
roster-window: fix event_activated_cb callback signature (967 bytes, patch)
2012-10-05 13:10 UTC, Guillaume Desmottes
committed Details | Review

Description Bilal Shahid 2012-08-13 07:43:15 UTC
Facebook friend's icon flashed between online icon and new message icon. Attempted to open the chat, empathy crashed. Facebook does not show any new messages.

ProblemType: Crash
DistroRelease: Ubuntu 12.10
Package: empathy 3.5.4.1-0ubuntu1
ProcVersionSignature: Ubuntu 3.5.0-7.7-generic 3.5.0
Uname: Linux 3.5.0-7-generic x86_64
ApportVersion: 2.4-0ubuntu6
Architecture: amd64
Date: Sat Aug  4 21:30:37 2012
ExecutablePath: /usr/bin/empathy
InstallationMedia: Ubuntu 12.10 "Quantal Quetzal" - Alpha amd64 (20120803.1)
ProcCmdline: empathy
ProcEnviron:
 PATH=(custom, no user)
 LANG=en_US.UTF-8
 SHELL=/bin/bash
Comment 1 Bilal Shahid 2012-08-13 07:43:45 UTC
Created attachment 220967 [details]
stacktrace
Comment 2 Guillaume Desmottes 2012-08-28 12:53:09 UTC
Probably related to bug #682035. Did you manage to reproduce it?
Comment 3 Guillaume Desmottes 2012-08-28 12:56:21 UTC
*** Bug 681724 has been marked as a duplicate of this bug. ***
Comment 4 Bilal Shahid 2012-08-28 17:43:38 UTC
i dont know i some other bugs are same as it is present in the list see
https://bugs.launchpad.net/ubuntu/+source/empathy/+bug/1022685
https://bugs.launchpad.net/ubuntu/+source/empathy/+bug/1037810
Comment 5 Bilal Shahid 2012-08-28 17:58:13 UTC
originally reported at 
https://bugs.launchpad.net/ubuntu/+source/empathy/+bug/1033099
Comment 6 Guillaume Desmottes 2012-09-13 09:44:50 UTC
*** Bug 682035 has been marked as a duplicate of this bug. ***
Comment 7 Guillaume Desmottes 2012-09-13 09:45:12 UTC
bug #682035 looks very similar: http://bugzilla-attachments.gnome.org/attachment.cgi?id=221441
Comment 8 Guillaume Desmottes 2012-09-13 12:52:10 UTC
I tried to reproduce this bug on Ubuntu Quantal and failed. More info welcome.
Comment 9 Guillaume Desmottes 2012-09-17 07:46:41 UTC
*** Bug 684104 has been marked as a duplicate of this bug. ***
Comment 10 Alexey 2012-10-05 10:24:41 UTC
Problem still exists - I was sent a message in empathy, by a user with an ICQ account and after clicking on it once (in the main empathy window) it would open the message - but it would continue to blink in empathy is if I still have a new message from that user. If I would click again on that user it would crash empathy.
This seems to happen every time I double click a message in the main empathy window. But if I open the message via the ubuntu messaging menu (without even opening the main empathy window the problem doesn't occur).

I'm using latest ubuntu 12.10 with all possible updates (up until an hour ago).
Comment 11 Guillaume Desmottes 2012-10-05 11:17:01 UTC
Does it happen only when receiving messages on this ICQ account? Can you reproduce with, say, a GTalk or Facebook account?
Comment 12 Guillaume Desmottes 2012-10-05 13:08:41 UTC
Got it! It's actually a very stupid bug...
Comment 13 Guillaume Desmottes 2012-10-05 13:10:23 UTC
Created attachment 225877 [details] [review]
roster-window: fix event_activated_cb callback signature

We receive the EmpathyEvent as the second signal argument, no as user_data
pointer (which is 'self').
Comment 14 Xavier Claessens 2012-10-08 08:10:57 UTC
+1
Comment 15 Guillaume Desmottes 2012-10-08 08:38:43 UTC
Attachment 225877 [details] pushed as 537ac5a - roster-window: fix event_activated_cb callback signature