roster-window: fix event_activated_cb callback signature

We receive the EmpathyEvent as the second signal argument, no as user_data
pointer (which is 'self').

https://bugzilla.gnome.org/show_bug.cgi?id=681725